changes at house

--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
 	  "angular-ui-router": "0.2.15",
 	  "bootstrap": "^3.3.0",
 	  "angular-bootstrap": "^2.1.0",
-      "font-awesome": "*",
+      "font-awesome": "4.7.0",
 	  "angular-animate": "1.5.0",
 	  "angular-animate-css": "^0.0.4",
       "angular-sanitize": "1.5.0"
